--- a/inedx.html
+++ b/inedx.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <div class="container">
+    <div class="navbar ">
+        <div class="container flex">
             <h1 class="logo">
-                DevSpace
+                DevSpace.
             </h1>
             <nav>
                 <ul>
                     <li>
                         <a href="inedx.html">Home</a>
-                        <a href="inedx.html">Latest Tech</a>
+                        <a href="latest.html">Latest Tech</a>
                         <a href="docs.html">Docs</a>
                     </li>
                 </ul>
