style showcase section

--- a/inedx.html
+++ b/inedx.html
@@ -20,12 +20,51 @@
                     <li>
                         <a href="inedx.html">Home</a>
                         <a href="latest.html">Latest Tech</a>
-                        <a href="docs.html">Docs</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="join-us.html">Join us</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </div>
+
+    <!-- Shocase  -->
+    <section class="showcase">
+        <div class="div container grid">
+            <div class="showcase-text">
+                <h1> Best Space For Programmers & Developers
+                </h1>
+                <p>Best meetup for programmer & developer. Learn more about the leatest technologies and programming news on our blogs. fill out the form to join the <b>DevSpace.</b> </p>
+                <a href="join-us.html" class="btn btn-outline">Join us</a>
+            </div>
+            <div class="showcase-form card">
+                <h2>Join DevSpace</h2>
+                <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-control">
+                        <label for="developer-type">choose your career</label>
+                        <select required>
+                           <option value="">I'am a... </option>
+                           <option value="front-end">Front-End Developer</option>
+                           <option value="back-end">Back-End Developer</option>
+                           <option value="full-stack">Full-Stack Developer</option>
+                           <option value="devops">DevOps</option>
+                           <option value="software-developer">Software Developer</option>
+                           <option value="mobile-dev">Mobile Developer</option>
+                           <option value="other">Other</option>
+                       </select>
+
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
