--- a/inedx.html
+++ b/inedx.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/utilities.css">
     <title>Developer Space</title>
 </head>
 
@@ -70,7 +71,30 @@
     </section>
     <!-- Stats  -->
     <section class="stats">
-
+        <div class="container">
+            <h3 class="stats-heading text-center ">
+                Welcome to the best platform for developer &amp; Programmer
+            </h3>
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-users fa-3x"></i>
+                    <h3>4k</h3>
+                    <p class="text-secondary">are joined until now</p>
+                </div>
+                <div><i class="fas fa-terminal fa-3x"></i>
+                    <h3>100k</h3>
+                    <p class="text-secondary">
+                        Question about Programming
+                    </p>
+                </div>
+                <div><i class="fas fa-rss-square fa-3x"></i>
+                    <h3>120.00</h3>
+                    <p class="text-secondary">
+                        The latest news about Tech
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script>
