--- a/inedx.html
+++ b/inedx.html
@@ -97,6 +97,19 @@
         </div>
     </section>
 
+    <section class="cli">
+        <div class="container grid">
+            <img src="/images/carbon.png" style="width: 100%;" alt="">
+
+            <div class="card">
+                <h3>Programming is life for us 😍</h3>
+            </div>
+            <div class="card">
+                <h3>write you 'Hello World' with you favorite Programming Language</h3>
+            </div>
+        </div>
+    </section>
+
     <script>
         $('#selectId').change(function() {
             if ($('select option:selected').text() == "Other") {
