add programming logos card

--- a/inedx.html
+++ b/inedx.html
@@ -51,15 +51,15 @@
                     <div class="form-control">
                         <label for="developer-type">choose your career</label>
                         <select required id="selectId">
-                           <option value="">I'am a... </option>
-                           <option value="front-end">Front-End Developer</option>
-                           <option value="back-end">Back-End Developer</option>
-                           <option value="full-stack">Full-Stack Developer</option>
-                           <option value="devops">DevOps</option>
-                           <option value="software-developer">Software Developer</option>
-                           <option value="mobile-dev">Mobile Developer</option>
-                           <option value="other" id="other-is-selected">Other</option>
-                       </select>
+                            <option value="">I'am a... </option>
+                            <option value="front-end">Front-End Developer</option>
+                            <option value="back-end">Back-End Developer</option>
+                            <option value="full-stack">Full-Stack Developer</option>
+                            <option value="devops">DevOps</option>
+                            <option value="software-developer">Software Developer</option>
+                            <option value="mobile-dev">Mobile Developer</option>
+                            <option value="other" id="other-is-selected">Other</option>
+                        </select>
                     </div>
                     <div class="form-control">
                         <input type="text" name="other" placeholder="Other..." required style="display: none;" id="other-input">
@@ -109,6 +109,59 @@
             </div>
         </div>
     </section>
+
+    <section class="programming bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-left">
+                <h2 class="lg">
+                    Which Programming Language Should You Learn?
+                </h2>
+                <p class="lead my-1">Some programmers are able to build a career out of being an expert in one language, but many programmers learn new languages frequently, Gorton says...</p>
+                <a href="" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="/images/what_is.jpg" class="rounded" alt="programming">
+        </div>
+    </section>
+
+    <!-- Languages  -->
+    <section class="languages">
+
+        <h2 class="md text-center my-2">
+            Programming Languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h5>JAVA</h5>
+                <img src="https://img.icons8.com/color/96/000000/java-coffee-cup-logo.png" />
+            </div>
+            <div class="card">
+                <h5>Python</h5>
+                <img src="https://img.icons8.com/color/96/000000/python.png" alt="python" />
+            </div>
+            <div class="card">
+                <h5>PHP</h5>
+                <img src="https://img.icons8.com/officel/96/000000/php-logo.png" alt="php" />
+            </div>
+            <div class="card">
+                <h5>Ruby</h5>
+                <img src="https://img.icons8.com/color/96/000000/ruby-programming-language.png" alt="ruby" />
+            </div>
+            <div class="card">
+                <h5>Node.js</h5>
+                <img src="https://img.icons8.com/color/96/000000/nodejs.png" alt="node.js" />
+            </div>
+            <div class="card">
+                <h5>C#</h5>
+                <img src="https://img.icons8.com/color/96/000000/c-sharp-logo.png" alt="C#" />
+            </div>
+            <div class="card">
+                <h5>javaScript</h5>
+                <img src="https://img.icons8.com/color/96/000000/javascript.png" />
+            </div>
+        </div>
+
+    </section>
+
 
     <script>
         $('#selectId').change(function() {
