add other pages

--- a/home.html
+++ b/home.html
@@ -162,6 +162,54 @@
 
     </section>
 
+    <!-- Footer  -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>DevSpace.</h1>
+                <p>Copyright &copy; 2020</p>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="latest.html">Leatest Tech</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a href="join-us.html">Join-Us</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="#">
+                    <i-fab class="fab fa-github fa-2x">
+
+                    </i-fab>
+                </a>
+                <a href="#">
+                    <i-fab class="fab fa-reddit fa-2x">
+
+                    </i-fab>
+                </a>
+                <a href="#">
+                    <i-fab class="fab fa-instagram fa-2x">
+
+                    </i-fab>
+                </a>
+                <a href="#">
+                    <i-fab class="fab fa-twitter fa-2x">
+
+                    </i-fab>
+                </a>
+            </div>
+        </div>
+    </footer>
+
 
     <script>
         $('#selectId').change(function() {
