add tech card on latest.html

--- a/latest.html
+++ b/latest.html
@@ -14,9 +14,7 @@
 <body>
     <div class="navbar ">
         <div class="container flex">
-            <h1 class="logo">
-                DevSpace.
-            </h1>
+            <h1 class="logo"> DevSpace. </h1>
             <nav>
                 <ul>
                     <li>
@@ -29,9 +27,61 @@
             </nav>
         </div>
     </div>
+    <section class="latest-main my-2">
+        <div class="container grid grid-2 ">
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/react-native.png" alt="reactJS" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/vue-js.png" alt="vueJS" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/angularjs.png" alt="angularJS" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/typescript.png" alt="type-script" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/ios/96/000000/jquery.png" alt="jQuery" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/bootstrap.png" alt="bootstrap" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
 
+            <div class="card flex">
+                <img src="https://img.icons8.com/windows/96/000000/laravel.png" alt="laravel" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/windows/96/000000/symfony.png" alt="symfony" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/spring-logo.png" alt="Spring-JAva-Framwork" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
 
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/flutter.png" alt="flutter" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/fluent/96/000000/android-os.png" alt="android" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
+            <div class="card flex">
+                <img src="https://img.icons8.com/color/96/000000/kotlin.png" alt="kotlin" />
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo asperiores voluptatibus alias perferendis numquam laudantium eligendi quidem. </p>
+            </div>
 
+        </div>
+    </section>
     <!-- Footer  -->
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
@@ -58,29 +108,23 @@
             <div class="social">
                 <a href="#">
                     <i-fab class="fab fa-github fa-2x">
-
                     </i-fab>
                 </a>
                 <a href="#">
                     <i-fab class="fab fa-reddit fa-2x">
-
                     </i-fab>
                 </a>
                 <a href="#">
                     <i-fab class="fab fa-instagram fa-2x">
-
                     </i-fab>
                 </a>
                 <a href="#">
                     <i-fab class="fab fa-twitter fa-2x">
-
                     </i-fab>
                 </a>
             </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
